<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_left_black"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_setting_header"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgShowTutorial"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/guide"
            app:tint="@color/color_primary"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/color_primary"
                        app:srcCompat="@drawable/ic_setting_warning" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center_vertical|start"
                        android:text="@string/tv_setting_sensitivity" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_border_setting"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:thumbTint="@color/color_primary"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/color_primary"
                        app:srcCompat="@drawable/ic_setting_warning" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:text="@string/tv_setting_extension"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/sw_setting_extension_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/color_primary"
                        app:srcCompat="@drawable/ic_setting_flash" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center_vertical|start"
                        android:text="@string/tv_setting_flash"
                        android:textColor="@color/black" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    android:background="@drawable/bg_border_setting"
                    >

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/tv_setting_flash_default"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black" />

                    <View
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:background="@color/md_blue_grey_100"
                        android:layout_height="1dp"
                        />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_flash_disco"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black" />

                    <View
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:background="@color/md_blue_grey_100"
                        android:layout_height="1dp"
                        />


                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_flash_sos"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/color_primary"
                        app:srcCompat="@drawable/ic_vibration" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center_vertical|start"
                        android:text="@string/tv_setting_vibration"
                        android:textColor="@color/black"/>
                </LinearLayout>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_border_setting"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/tv_setting_vibration_default"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_vibration_strong"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_vibration_heartbeat"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_vibration_ticktock"
                        android:buttonTint="@color/color_primary"
                        android:textColor="@color/black" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/color_primary"
                        app:srcCompat="@drawable/ic_setting_language" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center_vertical|start"
                        android:text="@string/tv_setting_language"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_border_setting"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:text="@string/tv_setting_language_vn"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/arrown_right_black" />


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>





</LinearLayout>