<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".DetailFragment">

<!-- header -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left_black"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_duration_activate"
        android:text="@string/tv_detailsound_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ads -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_border_setting"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_setting"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tvSoundName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/black"
                    tools:text="a"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_play"
                    android:layout_gravity="center_vertical"
                    app:tint="@color/color_primary" />
            </LinearLayout>

            <TextView
                android:id="@+id/test6"
                android:layout_width="match_parent"
                android:background="@color/md_blue_grey_100"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_flash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:thumbTint="@color/color_primary"
                android:layout_marginBottom="4dp"
                android:text="@string/sw_detailsound_flash"/>

            <TextView
                android:id="@+id/test1"
                android:layout_width="match_parent"
                android:background="@color/md_blue_grey_100"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_vibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:thumbTint="@color/color_primary"
                android:text="@string/sw_detailsound_vibration" />

            <TextView
                android:id="@+id/test2"
                android:layout_width="match_parent"
                android:background="@color/md_blue_grey_100"
                android:layout_height="1dp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:thumbTint="@color/color_primary"
                android:text="@string/sw_detailsound_sound"/>
            <TextView
                android:id="@+id/test4"
                android:layout_width="match_parent"
                android:background="@color/md_blue_grey_100"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/black"
                    android:text="@string/tv_detailsound_volume"/>

                <SeekBar
                    android:id="@+id/slider_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:thumbTint="@color/color_primary"
                    android:padding="10dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/test5"
                android:layout_width="match_parent"
                android:background="@color/md_blue_grey_100"
                android:layout_height="1dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detailsound_duration"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <RadioGroup
                    android:id="@+id/rdGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:button="@null"
                        android:checked="true"
                        android:textColor="@drawable/txt_duration_selector"
                        android:background="@drawable/bg_duration_selector"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_detailsound_duration_15s" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@drawable/txt_duration_selector"
                        android:background="@drawable/bg_duration_selector"
                        android:checked="false"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_detailsound_duration_30s" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@drawable/txt_duration_selector"
                        android:background="@drawable/bg_duration_selector"
                        android:checked="false"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_detailsound_duration_1m" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@drawable/txt_duration_selector"
                        android:background="@drawable/bg_duration_selector"
                        android:checked="false"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_detailsound_duration_2m" />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>


</LinearLayout>